--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -1,7 +1,7 @@
 /*general for homepage*/
 .nl-section.homepage.football-homepage {
-
-      h5 {
+  .player-info{ 
+    h5 {
       margin-bottom: 15px;
 
       @include respond-to(tablets) {
@@ -9,29 +9,25 @@
       }
 
       @include respond-to(wide-tablets) {
-        line-height: 0.9rem;
+        line-height: 1.65rem;
       }
 
       @include respond-to(medium-display) {
-        line-height: 1rem;
+        line-height: 1.65rem;
       }
 
      @include respond-to(wide-display) {
-        line-height: 1rem;
-      }
-
-      @include respond-to(allwide) {
-        margin-bottom: 28px;
+        line-height: 1.65rem;
       }
 
       @include respond-to (large-display) {
           font-size: 1.25rem;
-          line-height: 0.8rem;
+          line-height: 1.65rem;
       }
 
       @include respond-to (extra-large-display) {
           font-size: 1.25rem;
-          line-height: 0.85rem;
+          line-height: 1.55rem;
       }
 
     }
@@ -53,6 +49,7 @@
         display: block;
       }
     }
+  }  
 }
 
 .nl-section.homepage.soccer {
@@ -287,6 +284,7 @@
 }
 
 .homepage-field {
+
   .nl-team-list {
     max-width: 100%;
   }
@@ -296,6 +294,19 @@
 }
 
 .homepage {
+
+  .menu-item.top-5 .number p {
+    font-size: 18px;
+    line-height: 1.1;
+
+    @include respond-to (extra-large-display) {
+      line-height: 1.3;
+    }
+  }
+
+  .menu-item.top-5 .number {
+    font-size: 18px
+  }
 
   .nl-create-team .player-main-block.football .nl-LRB-position {
     bottom: 43%;
@@ -512,6 +523,7 @@
   }
 
   @media screen and (min-width: 1201px) {
+
     .manager-image {
       width: 100%;
       height: 260px;
@@ -1084,7 +1096,7 @@
       margin-bottom: 15px;
 
       @include respond-to(tablets) {
-        margin-bottom: 22px;
+        line-height: 1.25rem;
       }
 
       @include respond-to(wide-tablets) {
